name:                   lambdabot-core
version:                5.1.0.2

license:                GPL
license-file:           LICENSE

author:                 Don Stewart
maintainer:             James Cook <mokus@deepbondi.net>

category:               Development, Web
synopsis:               Lambdabot core functionality
description:            Lambdabot is an IRC bot written over several years by
                        those on the #haskell IRC channel.
                        .
                        Manage plugins, network connections, configurations
                        and much more.

homepage:               https://wiki.haskell.org/Lambdabot

build-type:             Simple
cabal-version:          >= 1.8
tested-with:            GHC == 7.8.4, GHC == 7.10.3

extra-source-files:     AUTHORS.md
                        COMMENTARY.md
                        README.md

source-repository head
  type:                 git
  location:             https://github.com/lambdabot/lambdabot.git

library
  hs-source-dirs:       src
  ghc-options:          -Wall
                        -funbox-strict-fields

  exposed-modules:      Lambdabot.Bot
                        Lambdabot.ChanName
                        Lambdabot.Command
                        Lambdabot.Compat.AltTime
                        Lambdabot.Compat.FreenodeNick
                        Lambdabot.Compat.PackedNick
                        Lambdabot.Config
                        Lambdabot.File
                        Lambdabot.IRC
                        Lambdabot.Logging
                        Lambdabot.Main
                        Lambdabot.Message
                        Lambdabot.Module
                        Lambdabot.Monad
                        Lambdabot.Nick
                        Lambdabot.Plugin
                        Lambdabot.Plugin.Core
                        Lambdabot.State
                        Lambdabot.Util

  other-modules:        Paths_lambdabot_core
                        Lambdabot.Config.Core
                        Lambdabot.Plugin.Core.Base
                        Lambdabot.Plugin.Core.Compose
                        Lambdabot.Plugin.Core.Help
                        Lambdabot.Plugin.Core.More
                        Lambdabot.Plugin.Core.OfflineRC
                        Lambdabot.Plugin.Core.System
                        Lambdabot.Plugin.Core.Version
                        Lambdabot.Util.Serial
                        Lambdabot.Util.Signals

  build-depends:        base                    >= 4.4 && < 5,
                        binary                  >= 0.5,
                        bytestring              >= 0.9,
                        containers              >= 0.4,
                        dependent-map           == 0.2.*,
                        dependent-sum           >= 0.3 && < 0.5,
                        dependent-sum-template  >= 0.0.0.1,
                        directory               >= 1.1,
                        edit-distance           >= 0.2,
                        filepath                >= 1.3,
                        haskeline               >= 0.7,
                        hslogger                >= 1.2.1,
                        HTTP                    >= 4000,
                        lifted-base             >= 0.2,
                        monad-control           >= 1.0,
                        mtl                     >= 2,
                        network                 >= 2.3.0.13,
                        time                    >= 1.4,
                        parsec                  >= 3,
                        prim-uniq               == 0.1.*,
                        random                  >= 1,
                        random-fu               >= 0.2.6.2,
                        random-source           >= 0.3,
                        regex-tdfa              >= 1.1,
                        SafeSemaphore           >= 0.9,
                        split                   >= 0.2,
                        syb                     >= 0.3,
                        template-haskell        >= 2.7,
                        transformers            >= 0.2,
                        transformers-base       >= 0.4,
                        utf8-string             >= 0.3,
                        zlib                    >= 0.5

  if !os(windows)
    build-depends:      unix                    >= 2.5
