name:                   lambdabot-core
version:                5.3.1.2

license:                GPL
license-file:           LICENSE

author:                 Don Stewart
maintainer:             Naïm Favier <n@monade.li>

category:               Development, Web
synopsis:               Lambdabot core functionality
description:            Lambdabot is an IRC bot written over several years by
                        those on the #haskell IRC channel.
                        .
                        Manage plugins, network connections, configurations
                        and much more.

homepage:               https://wiki.haskell.org/Lambdabot

build-type:             Simple
cabal-version:          >= 1.10
tested-with:            GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.4, GHC == 8.10.4, GHC == 9.0.2, GHC == 9.2.4, GHC == 9.4.5, GHC == 9.6.3

extra-source-files:     AUTHORS.md
                        COMMENTARY.md
                        README.md

source-repository head
  type:                 git
  location:             https://github.com/lambdabot/lambdabot.git

library
  hs-source-dirs:       src
  ghc-options:          -Wall
                        -funbox-strict-fields
  default-language:     Haskell98

  exposed-modules:      Lambdabot.Bot
                        Lambdabot.ChanName
                        Lambdabot.Command
                        Lambdabot.Compat.AltTime
                        Lambdabot.Compat.FreenodeNick
                        Lambdabot.Compat.PackedNick
                        Lambdabot.Config
                        Lambdabot.File
                        Lambdabot.IRC
                        Lambdabot.Logging
                        Lambdabot.Main
                        Lambdabot.Message
                        Lambdabot.Module
                        Lambdabot.Monad
                        Lambdabot.Nick
                        Lambdabot.Plugin
                        Lambdabot.Plugin.Core
                        Lambdabot.State
                        Lambdabot.Util
                        Lambdabot.Util.Network

  other-modules:        Paths_lambdabot_core
                        Lambdabot.Config.Core
                        Lambdabot.Plugin.Core.Base
                        Lambdabot.Plugin.Core.Compose
                        Lambdabot.Plugin.Core.Help
                        Lambdabot.Plugin.Core.More
                        Lambdabot.Plugin.Core.OfflineRC
                        Lambdabot.Plugin.Core.System
                        Lambdabot.Plugin.Core.Version
                        Lambdabot.Util.Serial
                        Lambdabot.Util.Signals

  build-depends:        base                    >= 4.4 && < 5,
                        binary                  >= 0.5,
                        bytestring              >= 0.9,
                        containers              >= 0.4,
                        dependent-map           >= 0.2 && < 0.5,
                        dependent-sum           >= 0.7 && < 0.8,
                        dependent-sum-template  >= 0.1.0.2 && < 0.2,
                        directory               >= 1.1,
                        edit-distance           >= 0.2,
                        exceptions              >= 0.10 && < 0.11,
                        filepath                >= 1.3,
                        haskeline               >= 0.7 && < 0.9,
                        hslogger                >= 1.2.1,
                        HTTP                    >= 4000,
                        lifted-base             >= 0.2,
                        monad-control           >= 1.0,
                        mtl                     >= 2,
                        network                 >= 2.7 && < 3.2,
                        network-bsd             >= 2.7 && < 2.9,
                        parsec                  >= 3,
                        prim-uniq               >= 0.2 && < 0.4,
                        random                  >= 1.2,
                        random-fu               >= 0.3.0.0,
                        regex-tdfa              >= 1.1 && < 1.4,
                        SafeSemaphore           >= 0.9,
                        split                   >= 0.2,
                        syb                     >= 0.3,
                        template-haskell        >= 2.7,
                        time                    >= 1.4,
                        transformers            >= 0.2,
                        transformers-base       >= 0.4,
                        utf8-string             >= 0.3,
                        zlib                    >= 0.5

  if !os(windows)
    build-depends:      unix                    >= 2.5
