name:                   lambdabot-haskell-plugins
version:                5.0

license:                GPL
license-file:           LICENSE

author:                 Don Stewart
maintainer:             James Cook <mokus@deepbondi.net>

category:               Development, Web
synopsis:               Lambdabot is a development tool and advanced IRC bot
description:            Lambdabot is an IRC bot written over several years by
                        those on the #haskell IRC channel.
                        .
                        It operates as a command line tool, embedded in an editor,
                        embedded in GHCi, via internet relay chat and on the web.

homepage:               http://haskell.org/haskellwiki/Lambdabot

build-type:             Simple
cabal-version:          >= 1.8
tested-with:            GHC==7.4.1, GHC == 7.6.3

extra-source-files:     src/Lambdabot/Plugin/Haskell/Free/Test.hs

source-repository head
  type:                 git
  location:             https://github.com/mokus0/lambdabot.git

library
  hs-source-dirs:       src
  ghc-options:          -Wall
                        -funbox-strict-fields

  exposed-modules:      Lambdabot.Plugin.Haskell

  other-modules:        Lambdabot.Config.Haskell
                        Lambdabot.Plugin.Haskell.Check
                        Lambdabot.Plugin.Haskell.Djinn
                        Lambdabot.Plugin.Haskell.Eval
                        Lambdabot.Plugin.Haskell.Free
                        Lambdabot.Plugin.Haskell.Free.Expr
                        Lambdabot.Plugin.Haskell.Free.FreeTheorem
                        Lambdabot.Plugin.Haskell.Free.Parse
                        Lambdabot.Plugin.Haskell.Free.Theorem
                        Lambdabot.Plugin.Haskell.Free.Type
                        Lambdabot.Plugin.Haskell.Free.Util
                        Lambdabot.Plugin.Haskell.Haddock
                        Lambdabot.Plugin.Haskell.Hoogle
                        Lambdabot.Plugin.Haskell.Instances
                        Lambdabot.Plugin.Haskell.Pl
                        Lambdabot.Plugin.Haskell.Pl.Common
                        Lambdabot.Plugin.Haskell.Pl.Names
                        Lambdabot.Plugin.Haskell.Pl.Optimize
                        Lambdabot.Plugin.Haskell.Pl.Parser
                        Lambdabot.Plugin.Haskell.Pl.PrettyPrinter
                        Lambdabot.Plugin.Haskell.Pl.RuleLib
                        Lambdabot.Plugin.Haskell.Pl.Rules
                        Lambdabot.Plugin.Haskell.Pl.Transform
                        Lambdabot.Plugin.Haskell.Pointful
                        Lambdabot.Plugin.Haskell.Pretty
                        Lambdabot.Plugin.Haskell.Source
                        Lambdabot.Plugin.Haskell.Type
                        Lambdabot.Plugin.Haskell.Undo
                        Lambdabot.Plugin.Haskell.UnMtl
                        Lambdabot.Util.Parser

  build-depends:        array                   >= 0.4,
                        base                    >= 4.4,
                        bytestring              >= 0.9,
                        containers              >= 0.4,
                        directory               >= 1.1,
                        filepath                >= 1.3,
                        haskell-src-exts        >= 1.14.0,
                        lambdabot-core          >= 5,
                        lifted-base             >= 0.2,
                        mtl                     >= 2,
                        oeis                    >= 0.3.1,
                        parsec                  >= 3,
                        pretty                  >= 1.1,
                        process                 >= 1.1,
                        QuickCheck              >= 2,
                        regex-tdfa              >= 1.1,
                        split                   >= 0.2,
                        syb                     >= 0.3,
                        transformers            >= 0.2,
                        utf8-string             >= 0.3,

                        -- runtime dependencies - for eval etc.
                        arrows                  >= 0.4,
                        data-memocombinators    >= 0.4,
                        hoogle                  >= 4.2,
                        IOSpec                  >= 0.2,
                        logict                  >= 0.5,
                        MonadRandom             >= 0.1,
                        mueval                  >= 0.9,
                        numbers                 >= 3000,
                        show                    >= 0.4,
                        vector-space            >= 0.8,
                        HTTP                    >= 4000,
                        network                 >= 2.3.0.13,
                        lambdabot-reference-plugins
