name:                   lambdabot-irc-plugins
version:                5.0.1

license:                GPL
license-file:           LICENSE

author:                 Don Stewart
maintainer:             James Cook <mokus@deepbondi.net>

category:               Development, Web
synopsis:               IRC plugins for lambdabot.
description:            Lambdabot is an IRC bot written over several years by
                        those on the #haskell IRC channel.
                        .
                        Provided plugins:
                        .
                        [irc] Lets lambdabot connect to IRC.
                        .
                        [localtime] Check user's local time.
                        .
                        [log] Log IRC channels.
                        .
                        [topic] Modify channel topics.

homepage:               http://haskell.org/haskellwiki/Lambdabot

build-type:             Simple
cabal-version:          >= 1.8
tested-with:            GHC == 7.6.3, GHC == 7.8.3

source-repository head
  type:                 git
  location:             https://github.com/lambdabot/lambdabot.git

library
  hs-source-dirs:       src
  ghc-options:          -Wall
                        -funbox-strict-fields

  exposed-modules:      Lambdabot.Plugin.IRC

  other-modules:        Lambdabot.Plugin.IRC.IRC
                        Lambdabot.Plugin.IRC.Localtime
                        Lambdabot.Plugin.IRC.Log
                        Lambdabot.Plugin.IRC.Topic

  build-depends:        base                    >= 4.4 && < 5,
                        bytestring              >= 0.9,
                        containers              >= 0.4,
                        directory               >= 1.1,
                        filepath                >= 1.3,
                        lambdabot-core          >= 5.0.1 && < 5.1,
                        lifted-base             >= 0.2,
                        mtl                     >= 2,
                        network                 >= 2.3.0.13,
                        time                    >= 1.4,
                        SafeSemaphore           >= 0.9,
                        split                   >= 0.2
