name:                   lambdabot-irc-plugins
version:                5.1.0.4

license:                GPL
license-file:           LICENSE

author:                 Don Stewart
maintainer:             James Cook <mokus@deepbondi.net>

category:               Development, Web
synopsis:               IRC plugins for lambdabot.
description:            Lambdabot is an IRC bot written over several years by
                        those on the #haskell IRC channel.
                        .
                        Provided plugins:
                        .
                        [irc] Lets lambdabot connect to IRC.
                        .
                        [localtime] Check user's local time.
                        .
                        [log] Log IRC channels.
                        .
                        [topic] Modify channel topics.

homepage:               https://wiki.haskell.org/Lambdabot

build-type:             Simple
cabal-version:          >= 1.8
tested-with:            GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.1

source-repository head
  type:                 git
  location:             https://github.com/lambdabot/lambdabot.git

library
  hs-source-dirs:       src
  ghc-options:          -Wall
                        -funbox-strict-fields

  exposed-modules:      Lambdabot.Plugin.IRC

  other-modules:        Lambdabot.Config.IRC
                        Lambdabot.Plugin.IRC.IRC
                        Lambdabot.Plugin.IRC.Localtime
                        Lambdabot.Plugin.IRC.Log
                        Lambdabot.Plugin.IRC.Topic

  build-depends:        base                    >= 4.4 && < 5,
                        bytestring              >= 0.9,
                        containers              >= 0.4,
                        directory               >= 1.1,
                        filepath                >= 1.3,
                        lambdabot-core          >= 5.1 && < 5.2,
                        lifted-base             >= 0.2,
                        mtl                     >= 2,
                        network                 >= 2.3.0.13,
                        time                    >= 1.4,
                        SafeSemaphore           >= 0.9,
                        split                   >= 0.2
