name:                   lambdabot-irc-plugins
version:                5.3.1.2

license:                GPL
license-file:           LICENSE

author:                 Don Stewart
maintainer:             Naïm Favier <n@monade.li>

category:               Development, Web
synopsis:               IRC plugins for lambdabot.
description:            Lambdabot is an IRC bot written over several years by
                        those on the #haskell IRC channel.
                        .
                        Provided plugins:
                        .
                        [irc] Lets lambdabot connect to IRC.
                        .
                        [localtime] Check user's local time.
                        .
                        [log] Log IRC channels.
                        .
                        [topic] Modify channel topics.

homepage:               https://wiki.haskell.org/Lambdabot

build-type:             Simple
cabal-version:          >= 1.10
tested-with:            GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.4, GHC == 8.10.4, GHC == 9.0.2, GHC == 9.2.4, GHC == 9.4.5, GHC == 9.6.3

source-repository head
  type:                 git
  location:             https://github.com/lambdabot/lambdabot.git

library
  hs-source-dirs:       src
  ghc-options:          -Wall
                        -funbox-strict-fields
  default-language:     Haskell98

  exposed-modules:      Lambdabot.Plugin.IRC

  other-modules:        Lambdabot.Config.IRC
                        Lambdabot.Plugin.IRC.IRC
                        Lambdabot.Plugin.IRC.Localtime
                        Lambdabot.Plugin.IRC.Log
                        Lambdabot.Plugin.IRC.Topic

  build-depends:        base                    >= 4.4 && < 5,
                        bytestring              >= 0.9,
                        containers              >= 0.4,
                        directory               >= 1.1,
                        filepath                >= 1.3,
                        lambdabot-core          >= 5.3 && < 5.4,
                        lifted-base             >= 0.2,
                        mtl                     >= 2,
                        network                 >= 2.7 && < 3.2,
                        SafeSemaphore           >= 0.9,
                        split                   >= 0.2,
                        time                    >= 1.4
