name:                   lambdabot-misc-plugins
version:                5.1.0.4

license:                GPL
license-file:           LICENSE

author:                 Don Stewart
maintainer:             James Cook <mokus@deepbondi.net>

category:               Development, Web
synopsis:               Lambdabot miscellaneous plugins 
description:            Lambdabot is an IRC bot written over several years by
                        those on the #haskell IRC channel.
                        .
                        Provided plugins:
                        .
                        [dummy] Many commands with fixed replies.
                        .
                        [error] Debug error handling.
                        .
                        [fresh] Generate Haskell project names.
                        .
                        [hello] Hello, world.
                        .
                        [stats] Ad-hoc statsd queries.
                        .
                        [todo] A to-do list for lambdabot.

homepage:               https://wiki.haskell.org/Lambdabot

build-type:             Simple
cabal-version:          >= 1.8
tested-with:            GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.1

source-repository head
  type:                 git
  location:             https://github.com/lambdabot/lambdabot.git

flag network-uri
  description: Get Network.URI from the network-uri package
  default: True

library
  hs-source-dirs:       src
  ghc-options:          -Wall
                        -funbox-strict-fields

  exposed-modules:      Lambdabot.Plugin.Misc
  other-modules:        Lambdabot.Plugin.Misc.Dummy
                        Lambdabot.Plugin.Misc.Error
                        Lambdabot.Plugin.Misc.Fresh
                        Lambdabot.Plugin.Misc.Hello
                        Lambdabot.Plugin.Misc.Stats
                        Lambdabot.Plugin.Misc.Todo

  other-modules:        Lambdabot.Plugin.Misc.Dummy.DocAssocs

  build-depends:        base                    >= 4.4 && < 5,
                        bytestring              >= 0.9,
                        containers              >= 0.4,
                        filepath                >= 1.3,
                        hstatsd                 >= 0.1,
                        lambdabot-core          >= 5.1 && < 5.2,
                        lifted-base             >= 0.2,
                        mtl                     >= 2,
                        time                    >= 1.4,
                        parsec                  >= 3,
                        process                 >= 1.1,
                        random                  >= 1,
                        random-fu               >= 0.2.6.2,
                        random-source           >= 0.3,
                        regex-tdfa              >= 1.1,
                        SafeSemaphore           >= 0.9,
                        split                   >= 0.2,
                        tagsoup                 >= 0.12,
                        template-haskell        >= 2.7,
                        transformers            >= 0.2,
                        transformers-base       >= 0.4,
                        unix                    >= 2.5,
                        utf8-string             >= 0.3,
                        zlib                    >= 0.5

  if flag(network-uri)
    build-depends: network-uri >= 2.6, network >= 2.6
  else
    build-depends: network-uri < 2.6, network < 2.6
