name:                   lambdabot-misc-plugins
version:                5.3.1.1

license:                GPL
license-file:           LICENSE

author:                 Don Stewart
maintainer:             Naïm Favier <n@monade.li>

category:               Development, Web
synopsis:               Lambdabot miscellaneous plugins
description:            Lambdabot is an IRC bot written over several years by
                        those on the #haskell IRC channel.
                        .
                        Provided plugins:
                        .
                        [dummy] Many commands with fixed replies.
                        .
                        [error] Debug error handling.
                        .
                        [fresh] Generate Haskell project names.
                        .
                        [hello] Hello, world.
                        .
                        [todo] A to-do list for lambdabot.

homepage:               https://wiki.haskell.org/Lambdabot

build-type:             Simple
cabal-version:          >= 1.10
tested-with:            GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.4, GHC == 8.10.4, GHC == 9.0.2, GHC == 9.2.4, GHC == 9.4.5

source-repository head
  type:                 git
  location:             https://github.com/lambdabot/lambdabot.git

library
  hs-source-dirs:       src
  ghc-options:          -Wall
                        -funbox-strict-fields
  default-language:     Haskell98

  exposed-modules:      Lambdabot.Plugin.Misc
  other-modules:        Lambdabot.Plugin.Misc.Dummy
                        Lambdabot.Plugin.Misc.Error
                        Lambdabot.Plugin.Misc.Fresh
                        Lambdabot.Plugin.Misc.Hello
                        Lambdabot.Plugin.Misc.Todo

  other-modules:        Lambdabot.Plugin.Misc.Dummy.DocAssocs

  build-depends:        base                    >= 4.4 && < 5,
                        bytestring              >= 0.9,
                        containers              >= 0.4,
                        filepath                >= 1.3,
                        lambdabot-core          >= 5.3 && < 5.4,
                        lifted-base             >= 0.2,
                        mtl                     >= 2,
                        network                 >= 2.7 && < 3.2,
                        network-uri             >= 2.6 && < 2.7,
                        parsec                  >= 3,
                        process                 >= 1.1,
                        regex-tdfa              >= 1.1,
                        SafeSemaphore           >= 0.9,
                        split                   >= 0.2,
                        tagsoup                 >= 0.12,
                        template-haskell        >= 2.7,
                        time                    >= 1.4,
                        transformers            >= 0.2,
                        transformers-base       >= 0.4,
                        unix                    >= 2.5,
                        utf8-string             >= 0.3,
                        zlib                    >= 0.5
